rewrite the model.py ,complete the video plotting in dataexaminator and add a GearTest.ipynb for testing vairous models' components

--- a/utils/dataexaminator.ipynb
+++ b/utils/dataexaminator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,59 +101,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[PosixPath('2011_09_29'),\n",
-       " PosixPath('2011_09_30'),\n",
-       " PosixPath('2011_09_26'),\n",
-       " PosixPath('2011_09_28'),\n",
-       " PosixPath('2011_10_03')]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "roots = Path('.').iterdir()\n",
     "\n",
     "roots=list(roots)\n",
     "\n",
-    "roots = [root for root in roots if root.is_dir() and root.name!='.ipynb_checkpoints']\n",
+    "roots = [root for root in roots if root.is_dir() and \"2011_\" in root.name]\n",
     "\n",
     "roots"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PosixPath('2011_09_28/2011_09_28_drive_0134_sync')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "root = np.random.choice(roots)\n",
-    "\n",
-    "folder = np.random.choice( tuple(root.iterdir()) ); folder"
+    "folder = np.random.choice([d for d in root.iterdir() if d.is_dir()]); folder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,27 +136,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['timestamps.txt', 'data']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "os.listdir(str(img02))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,56 +165,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(('0000000000.png', '0000000000.png'),\n",
-       " ('0000000001.png', '0000000001.png'),\n",
-       " ('0000000002.png', '0000000002.png'),\n",
-       " ('0000000003.png', '0000000003.png'),\n",
-       " ('0000000004.png', '0000000004.png'))"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tuple(zip( img02ds[:5], img03ds[:5]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert img02ds == img03ds"
+    "assert len( set(img02ds) - set(img03ds) ) == 0, set(img02ds) - set(img03ds)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2011-09-28 13:49:44.755371520\n",
-      "2011-09-28 13:49:44.858636544\n",
-      "2011-09-28 13:49:44.961804288\n",
-      "2011-09-28 13:49:45.065025280\n",
-      "2011-09-28 13:49:45.168167680\n",
-      "2011-09-28 13:49:45.271425536\n",
-      "2011-09-28 13:49:45.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open(str(img02/'timestamps.txt')) as f:\n",
     "    print(f.read()[:200])"
@@ -260,26 +193,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2011-09-28 13:49:44.754877696\n",
-      "2011-09-28 13:49:44.858016768\n",
-      "2011-09-28 13:49:44.961296640\n",
-      "2011-09-28 13:49:45.064413952\n",
-      "2011-09-28 13:49:45.167686912\n",
-      "2011-09-28 13:49:45.270814464\n",
-      "2011-09-28 13:49:45.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open(str(img03/'timestamps.txt')) as f:\n",
     "    print(f.read()[:200])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(root.iterdir())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cam = root/'calib_cam_to_cam.txt'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "camret = {}\n",
+    "with cam.open('r') as f:\n",
+    "    for l in f:\n",
+    "        kv = l.rstrip().split(':')\n",
+    "        k, v = kv[0], kv[1]\n",
+    "        v= v.split(' ')[1:]\n",
+    "        camret[k] = v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "camret.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cam3para = np.array(tuple(float(e) for e in camret['P_rect_03'])).reshape(3,4)\n",
+    "cam2para = np.array(tuple(float(e) for e in camret['P_rect_02'])).reshape(3,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cam2para"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cam3para"
    ]
   },
   {
@@ -295,7 +284,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.animation as animation"
+    "import matplotlib.animation as animation\n",
+    "from IPython.display import HTML"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure()\n",
+    "\n",
+    "\n",
+    "def f(x, y):\n",
+    "    return np.sin(x) + np.cos(y)\n",
+    "\n",
+    "x = np.linspace(0, 2 * np.pi, 120)\n",
+    "y = np.linspace(0, 2 * np.pi, 100).reshape(-1, 1)\n",
+    "\n",
+    "im = plt.imshow(f(x, y), animated=True)\n",
+    "\n",
+    "\n",
+    "def updatefig(*args):\n",
+    "    global x, y\n",
+    "    x += np.pi / 15.\n",
+    "    y += np.pi / 20.\n",
+    "    im.set_array(f(x, y))\n",
+    "    return im,\n",
+    "\n",
+    "ani = animation.FuncAnimation(fig, updatefig, interval=50, blit=True)\n",
+    "HTML(ani.to_html5_video())"
    ]
   },
   {
@@ -307,7 +326,10 @@
     "fig, ax = plt.subplots()\n",
     "\n",
     "shape = plt.imread(str(img02d/img02ds[0])).shape\n",
+    "print('shape of a frame: ', shape)\n",
     "im = ax.imshow(np.zeros(shape), animated=True)\n",
+    "ax.set_axis_off()\n",
+    "plt.tight_layout()\n",
     "\n",
     "def frame(paths, root):\n",
     "    for path in paths:\n",
@@ -318,23 +340,12 @@
     "    return im\n",
     "\n",
     "# Init only required for blitting to give a clean slate.\n",
-    "def init(imgsample):\n",
+    "def init():\n",
     "    im.set_array(np.zeros(shape))\n",
     "    return im\n",
     "\n",
-    "ani = animation.FuncAnimation(fig, animate, frame(img02ds, img02d), interval=25, blit=True)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for img in img02ds[:10]:\n",
-    "    plt.imshow(plt.imread(str(img02d/img)))\n",
-    "    plt.show()"
+    "ani = animation.FuncAnimation(fig, animate, frames=list(frame(img02ds, img02d)), interval=25)\n",
+    "HTML(ani.to_html5_video())"
    ]
   },
   {
@@ -352,21 +363,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shape = np.array(shape[:2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "shape = np.array(shape[:2])\n",
     "shape/ shape[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,20 +397,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('0000000000.png', '0000000001.png', '0000000002.png')"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tris[0]"
    ]
@@ -468,171 +460,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[PosixPath('2011_09_29'),\n",
-       " PosixPath('2011_09_30'),\n",
-       " PosixPath('2011_09_26'),\n",
-       " PosixPath('2011_09_28'),\n",
-       " PosixPath('2011_10_03')]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from collections import namedtuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CAMPARA = namedtuple('campara',['fx','fy','cx','cy'])\n",
+    "def get_campara(date):\n",
+    "    cam = date/'calib_cam_to_cam.txt'\n",
+    "    camret = {}\n",
+    "    with cam.open('r') as f:\n",
+    "        for l in f:\n",
+    "            kv = l.rstrip().split(':')\n",
+    "            k, v = kv[0], kv[1]\n",
+    "            v= v.split(' ')[1:]\n",
+    "            camret[k] = v\n",
+    "    cam2para = np.array(tuple(float(e) for e in camret['P_rect_02'])).reshape(3,4)\n",
+    "    return CAMPARA(fx = cam2para[0,0], fy = cam2para[1,1], cx = cam2para[0,2], cy = cam2para[1,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gene_tri(imgs):\n",
+    "    return imgs[0:-2], imgs[1:-1], imgs[2:] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_campara(root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "roots = Path('.').iterdir()\n",
+    "roots=list(roots)\n",
+    "roots = [root for root in roots if root.is_dir() and '2011_' in root.name]\n",
     "roots"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PosixPath('2011_09_28/2011_09_28_drive_0134_sync')"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "folder"
+    "pwd()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "timgs0, timgs1, timgs2, paras = [], [], [], []\n",
     "for root in roots:\n",
-    "    timgs0, timgs1, timgs2 = [], [], []\n",
+    "    para = get_campara(root)\n",
     "    folders = root.glob(\"*_sync\")\n",
     "    for folder in folders:\n",
     "        img02 = folder /'image_02'/'data'\n",
     "        img03 = folder /'image_03'/'data'\n",
     "        \n",
-    "        for root in (img02, img03):\n",
-    "            imgs = sorted([str(img) for img in root.iterdir()])\n",
+    "        for which in (img02, img03):\n",
+    "            imgs = sorted([str(img) for img in which.iterdir()])\n",
     "            imgs0, imgs1, imgs2 = gene_tri(imgs)\n",
     "            timgs0 += imgs0\n",
     "            timgs1 += imgs1\n",
     "            timgs2 += imgs2\n",
-    "        "
+    "            paras += [para]*len(imgs0)\n",
+    "paras = tuple(zip(*paras))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>t0</th>\n",
-       "      <th>t1</th>\n",
-       "      <th>t2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2011_10_03/2011_10_03_drive_0058_sync/image_02...</td>\n",
-       "      <td>2011_10_03/2011_10_03_drive_0058_sync/image_02...</td>\n",
-       "      <td>2011_10_03/2011_10_03_drive_0058_sync/image_02...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2011_10_03/2011_10_03_drive_0058_sync/image_02...</td>\n",
-       "      <td>2011_10_03/2011_10_03_drive_0058_sync/image_02...</td>\n",
-       "      <td>2011_10_03/2011_10_03_drive_0058_sync/image_02...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2011_10_03/2011_10_03_drive_0058_sync/image_02...</td>\n",
-       "      <td>2011_10_03/2011_10_03_drive_0058_sync/image_02...</td>\n",
-       "      <td>2011_10_03/2011_10_03_drive_0058_sync/image_02...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2011_10_03/2011_10_03_drive_0058_sync/image_02...</td>\n",
-       "      <td>2011_10_03/2011_10_03_drive_0058_sync/image_02...</td>\n",
-       "      <td>2011_10_03/2011_10_03_drive_0058_sync/image_02...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2011_10_03/2011_10_03_drive_0058_sync/image_02...</td>\n",
-       "      <td>2011_10_03/2011_10_03_drive_0058_sync/image_02...</td>\n",
-       "      <td>2011_10_03/2011_10_03_drive_0058_sync/image_02...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                  t0  \\\n",
-       "0  2011_10_03/2011_10_03_drive_0058_sync/image_02...   \n",
-       "1  2011_10_03/2011_10_03_drive_0058_sync/image_02...   \n",
-       "2  2011_10_03/2011_10_03_drive_0058_sync/image_02...   \n",
-       "3  2011_10_03/2011_10_03_drive_0058_sync/image_02...   \n",
-       "4  2011_10_03/2011_10_03_drive_0058_sync/image_02...   \n",
-       "\n",
-       "                                                  t1  \\\n",
-       "0  2011_10_03/2011_10_03_drive_0058_sync/image_02...   \n",
-       "1  2011_10_03/2011_10_03_drive_0058_sync/image_02...   \n",
-       "2  2011_10_03/2011_10_03_drive_0058_sync/image_02...   \n",
-       "3  2011_10_03/2011_10_03_drive_0058_sync/image_02...   \n",
-       "4  2011_10_03/2011_10_03_drive_0058_sync/image_02...   \n",
-       "\n",
-       "                                                  t2  \n",
-       "0  2011_10_03/2011_10_03_drive_0058_sync/image_02...  \n",
-       "1  2011_10_03/2011_10_03_drive_0058_sync/image_02...  \n",
-       "2  2011_10_03/2011_10_03_drive_0058_sync/image_02...  \n",
-       "3  2011_10_03/2011_10_03_drive_0058_sync/image_02...  \n",
-       "4  2011_10_03/2011_10_03_drive_0058_sync/image_02...  "
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train = pd.DataFrame(dict(t0=timgs0, t1=timgs1, t2=timgs2)); train.head()"
+    "train = pd.DataFrame(dict(t0=timgs0, t1=timgs1,t2=timgs2,\n",
+    "                          fx=paras[0],fy=paras[1],\n",
+    "                          cx=paras[2],cy=paras[3])\n",
+    "                    )\n",
+    "train.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +593,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.6",
    "language": "python",
    "name": "python3"
   },
@@ -673,7 +607,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
