--- a/utils/dataexaminator.ipynb
+++ b/utils/dataexaminator.ipynb
@@ -802,7 +802,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val.to_csv('validation.csv'); train.to_csv('training.csv');"
+    "val.to_csv('validation.csv', index=False); train.to_csv('training.csv', index=False);"
    ]
   },
   {
@@ -815,7 +815,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -829,7 +829,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
