--- a/utils/preprocess.ipynb
+++ b/utils/preprocess.ipynb
@@ -13,26 +13,14 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "/opt/ros/kinetic/lib/python2.7/dist-packages/cv2.so: undefined symbol: PyCObject_Type",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-c8ec22b3e787>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m: /opt/ros/kinetic/lib/python2.7/dist-packages/cv2.so: undefined symbol: PyCObject_Type"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,11 +38,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "USE_CV = False\n",
+    "FORCE = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "USE_CV = True\n",
     "\n",
     "def load_img(path):\n",
     "    if USE_CV:\n",
@@ -86,21 +83,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "size = (188, 620)"
+    "if USE_CV:\n",
+    "    size = (640, 192)\n",
+    "else:\n",
+    "    size = (192, 640)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[PosixPath('2011_09_26')]"
+       "[PosixPath('2011_09_29'),\n",
+       " PosixPath('2011_09_30'),\n",
+       " PosixPath('2011_09_26'),\n",
+       " PosixPath('2011_09_28'),\n",
+       " PosixPath('2011_10_03')]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,25 +117,158 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "size = (188, 620)\n",
+    "#size = (620, 188)\n",
+    "for root in roots:\n",
+    "    folders = root.glob(\"*_sync\")\n",
+    "    for folder in folders:\n",
+    "        img02r = folder /'image_02_{}_{}'.format(*size)/'data'\n",
+    "        img03r = folder /'image_03_{}_{}'.format(*size)/'data'\n",
+    "\n",
+    "        for which in (img02r, img03r):\n",
+    "            !rm -r {str(which)}"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tqdm import tqdm_notebook as tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "45a97939a3a74a3eac9411c23a20a7db",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=1), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/aurora/.local/lib/python3.5/site-packages/skimage/transform/_warps.py:84: UserWarning: The default mode, 'constant', will be changed to 'reflect' in skimage 0.15.\n",
-      "  warn(\"The default mode, 'constant', will be changed to 'reflect' in \"\n",
-      "/home/aurora/.local/lib/python3.5/site-packages/skimage/util/dtype.py:122: UserWarning: Possible precision loss when converting from float64 to uint8\n",
-      "  .format(dtypeobj_in, dtypeobj_out))\n"
+      "\n"
      ]
     }
    ],
    "source": [
+    "pbar=tqdm(total=1)\n",
+    "pbar.update(1)\n",
+    "pbar.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "timgs0, timgs1, timgs2, paras = [], [], [], []\n",
+    "\n",
+    "\n",
+    "readimgs = []\n",
+    "saveimgs = []\n",
+    "\n",
     "for root in roots:\n",
-    "    #para = get_campara(root)\n",
+    "    folders = root.glob(\"*_sync\")\n",
+    "    for folder in folders:\n",
+    "        img02 = folder /'image_02'/'data'\n",
+    "        img03 = folder /'image_03'/'data'\n",
+    "        img02r = folder /'image_02_{}_{}'.format(*size)/'data'\n",
+    "        img03r = folder /'image_03_{}_{}'.format(*size)/'data'\n",
+    "        \n",
+    "        img02r.mkdir(parents=True, exist_ok=True)\n",
+    "        img03r.mkdir(parents=True, exist_ok=True)\n",
+    "        for which, which_r in ((img02, img02r), (img03, img03r)):\n",
+    "            imgs = sorted([img for img in which.iterdir()])\n",
+    "            readimgs += imgs\n",
+    "            saveimgs += [which_r/img.name for img in imgs]\n",
+    "\n",
+    "total = len(readimgs); total                "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from multiprocessing import Process, Lock\n",
+    "\n",
+    "def f(readimgs, saveimgs):\n",
+    "    pbar = tqdm(total=len(readimgs))\n",
+    "    for img, saveimg in zip(readimgs, saveimgs):\n",
+    "        if not saveimg.exists() or FORCE:\n",
+    "            resized = resize_img( load_img(str(img)), size)\n",
+    "            save_img(str(saveimg), resized)        \n",
+    "        pbar.update(1)\n",
+    "    pbar.close"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ncores = 6\n",
+    "space = int( total / ncores ) + 1 \n",
+    "ps = []\n",
+    "space"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "for num in range(ncores):\n",
+    "    p = Process(target=f,\n",
+    "                args=(readimgs[space*num: space*(num+1)],\n",
+    "                      saveimgs[space*num: space*(num+1)],\n",
+    "                      )\n",
+    "               )\n",
+    "    ps.append(p)\n",
+    "    \n",
+    "for p in ps: p.start()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for p in ps: p.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pbar = tqdm(total=total)\n",
+    "for root in roots:\n",
     "    folders = root.glob(\"*_sync\")\n",
     "    for folder in folders:\n",
     "        img02 = folder /'image_02'/'data'\n",
@@ -145,13 +282,17 @@
     "            imgs = sorted([img for img in which.iterdir()])\n",
     "            \n",
     "            for img in imgs:\n",
-    "                resized = resize( load_img(str(img)), size)\n",
-    "                save_img(which_r/img.name, resized)"
+    "                img_r = which_r/img.name\n",
+    "                if not img_r.exists() or FORCE:\n",
+    "                    resized = resize_img( load_img(str(img)), size)\n",
+    "                    save_img(str(img_r), resized)\n",
+    "                pbar.update(1)\n",
+    "pbar.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,13 +373,45 @@
     "                          fx=paras[0],fy=paras[1],\n",
     "                          cx=paras[2],cy=paras[3])\n",
     "                    )\n",
+    "\n",
+    "train[['fx','fy','cx','cy']]=train[['fx','fy','cx','cy']]/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "train.head()\n",
     "\n",
     "val = train.iloc[int(len(train)*0.9):]\n",
     "train = train.iloc[:int(len(train)*0.9)]\n",
     "\n",
-    "val.to_csv('validation_{}_{}.csv'.format(*size))\n",
-    "train.to_csv('training{}_{}.csv'.format(*size));"
+    "if USE_CV:\n",
+    "    val.to_csv('validation_{1}_{0}.csv'.format(*size), index=False)\n",
+    "    train.to_csv('training_{1}_{0}.csv'.format(*size), index=False);\n",
+    "else:\n",
+    "    val.to_csv('validation_{}_{}.csv'.format(*size), index=False)\n",
+    "    train.to_csv('training_{}_{}.csv'.format(*size), index=False);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val.head()"
    ]
   },
   {
@@ -251,7 +424,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -265,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
