--- a/test.ipynb
+++ b/test.ipynb
@@ -578,11 +578,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set_trainable(m.rn, False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "l = Loss().cuda() "
+    "l = Loss(scale=0.5, Tscale=0.01).cuda() "
    ]
   },
   {
@@ -591,7 +600,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "opt = optim.SGD(m.parameters(), lr=0.0001, momentum=0.9)\n",
+    "opt = optim.SGD(filter(lambda p: p.requires_grad, m.parameters()), lr=0.001, momentum=0.9)\n",
     "#opt = optim.Adam(m.parameters())"
    ]
   },
@@ -1565,7 +1574,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.6",
    "language": "python",
    "name": "python3"
   },
@@ -1579,7 +1588,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
